<resources>
    <string name="app_name">DigitalDepartments</string>
    <string name="register_button">Зарегистрироваться</string>
    <string name="already_have_account">Уже есть аккаунт?</string>
    <string name="welcome_message_1">Пожалуй, лучший фитнес трекер в ДВФУ</string>
    <string name="welcome_message_2">Созданный студентами</string>
    <string name="bicycles_image_desc">Ребята на велосипедах</string>

    <string name="registration">Регистрация</string>

    <string name="login">Логин</string>
    <string name="nickname">Имя или никнейм</string>
    <string name="password">Пароль</string>
    <string name="password_confirm">Повторите пароль</string>
    <string name="sex">Пол</string>
    <string name="sex_man">Мужской</string>
    <string name="sex_female">Женский</string>
    <string name="sex_other">Другое</string>

    <string name="policy_agreement_full">Нажимая на кнопку, вы соглашаетесь с политикой конфиденциальности и обработки персональных данных, а также принимаете пользовательское соглашение</string>
    <string name="policy_agreement_1">Нажимая на кнопку, вы соглашаетесь с </string>
    <string name="policy_agreement_link_1">политикой конфиденциальности</string>
    <string name="policy_agreement_2"> и обработки персональных данных, а также принимаете </string>
    <string name="policy_agreement_link_2">пользовательское соглашение</string>

    <string name="log_in">Вход</string>
    <string name="log_in_button">Войти</string>

    <string name="activity">Активность</string>
    <string name="profile">Профиль</string>

    <string name="my">Моя</string>
    <string name="users">Пользователей</string>

    <string name="distance_example">14.32 км</string>
    <string name="duration_example">2 часа 36 минут</string>
    <string name="short_duration_example">2 ч 36 мин</string>
    <string name="activity_name_example">Серфинг</string>
    <string name="activity_date_example">14 часов назад</string>
    <string name="username_example">\@van_darkholme</string>
    <string name="username_template">\@%1$s</string>
    <string name="date_section_example">Вчера</string>
    <string name="start_time_example">14:49</string>
    <string name="finish_time_example">16:31</string>
    <string name="commentary_example">Я бежал очень сильно, ты так не сможешь</string>

    <string name="start">Старт</string>
    <string name="finish">Финиш</string>
    <string name="start_finish_divider">|</string>
    <string name="commentary">Комментарий</string>
    <string name="delete">Удалить</string>
    <string name="share">Поделиться</string>

    <string name="new_activity_start">Погнали? :)</string>
    <string name="new_activity_start_button">Начать</string>
    <string name="activity_type_bicycle">Велосипед</string>
    <string name="activity_type_running">Бег</string>
    <string name="activity_type_walking">Шаг</string>
    <string name="current_time_example">00:01:46</string>
    <string name="add_activity_fab_desc">Кнопка со стрелкой проигрывания</string>

    <string name="save">Сохранить</string>
    <string name="login_example">Supertox</string>
    <string name="nickname_example">geraltizreevii</string>
    <string name="change_password">Изменить пароль</string>
    <string name="log_out_button">Выйти</string>

    <string name="old_password">Старый пароль</string>
    <string name="new_password">Новый пароль</string>
    <string name="new_password_confirm">Повторите пароль</string>
    <string name="confirm">Принять</string>
    <string name="empty_activities_main">Время потренить</string>
    <string name="empty_activities_sub">Нажимай на кнопку ниже и начинаем трекать активность</string>

    <string name="distance_measure_template">%s км</string>

    <plurals name="hours">
        <item quantity="one">%d час</item>
        <item quantity="few">%d часа</item>
        <item quantity="other">%d часов</item>
    </plurals>
    <plurals name="minutes">
        <item quantity="one">%d минута</item>
        <item quantity="few">%d минуты</item>
        <item quantity="other">%d минут</item>
    </plurals>
    <string name="duration_template">%1$s %2$s</string>

    <string name="activity_date_template">%1$td.%2$tm.%3$tY</string>
    <string name="time_template">%1$tH:%2$tM</string>
</resources>