<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.details.MyActivityDetailsFragment"
    android:background="@color/light_gray"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/activity_details_toolbar"
        style="@style/ToolBarStyle.WithNavigation"

        app:title="@string/activity_name_example"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:layout_marginVertical="1dp"
        android:paddingHorizontal="@dimen/start_end_padding_x2">

        <TextView
            android:id="@+id/username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/username_example"
            android:textSize="@dimen/small_text"
            android:textColor="?attr/colorPrimary"
            android:layout_marginTop="24dp"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/distance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/distance_example"
            android:textSize="@dimen/large_text"
            android:textStyle="bold"
            android:layout_marginTop="24dp"

            app:layout_constraintTop_toBottomOf="@id/username"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/activity_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/activity_date_example"
            android:textSize="@dimen/small_text"
            android:textColor="@color/gray"

            app:layout_constraintTop_toBottomOf="@id/distance"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/short_time_example"
            android:textSize="@dimen/large_text"
            android:textStyle="bold"
            android:layout_marginTop="24dp"

            app:layout_constraintTop_toBottomOf="@id/activity_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.constraintlayout.helper.widget.Layer
            android:id="@+id/layer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/time"
            app:constraint_referenced_ids="start, start_time, start_finish_divider, finish, finish_time"/>

        <TextView
            android:id="@+id/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:textSize="@dimen/small_text"

            app:layout_constraintTop_toTopOf="@id/layer"
            app:layout_constraintStart_toStartOf="@id/layer"
            app:layout_constraintEnd_toStartOf="@id/start_time"/>

        <TextView
            android:id="@+id/start_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_time_exmaple"
            android:textSize="@dimen/small_text"
            android:textColor="@color/gray"
            android:layout_marginStart="8dp"

            app:layout_constraintTop_toTopOf="@id/layer"
            app:layout_constraintStart_toEndOf="@id/start"
            app:layout_constraintEnd_toStartOf="@id/start_finish_divider"/>

        <TextView
            android:id="@+id/start_finish_divider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_finish_divider"
            android:textSize="@dimen/small_text"
            android:textColor="@color/gray"
            android:layout_marginHorizontal="16dp"

            app:layout_constraintTop_toTopOf="@id/layer"
            app:layout_constraintStart_toEndOf="@id/start_time"
            app:layout_constraintEnd_toStartOf="@id/finish"/>

        <TextView
            android:id="@+id/finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/finish"
            android:textSize="@dimen/small_text"

            app:layout_constraintTop_toTopOf="@id/layer"
            app:layout_constraintStart_toEndOf="@id/start_finish_divider"
            app:layout_constraintEnd_toStartOf="@id/finish_time"/>

        <TextView
            android:id="@+id/finish_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/finish_time_example"
            android:textSize="@dimen/small_text"
            android:textColor="@color/gray"
            android:layout_marginStart="8dp"

            app:layout_constraintTop_toTopOf="@id/layer"
            app:layout_constraintStart_toEndOf="@id/finish"/>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/commentary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"

            app:boxBackgroundColor="@color/unenabled_text_input"
            app:boxStrokeColor="@color/unenabled_text_input_borders"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/finish_time">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/commentary_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:textColor="@color/gray"
                android:textSize="@dimen/small_text"
                android:text="@string/commentary_example"

                android:inputType="textMultiLine" />
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>



</LinearLayout>