<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/registration_toolbar"
        style="@style/ToolBarStyle"

        app:title="@string/registration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/registration_toolbar"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="@integer/guideline_start_percent"/>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="@integer/guideline_end_percent"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintVertical_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="@id/guideline_1"
                app:layout_constraintEnd_toStartOf="@id/guideline_2"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/nickname_input">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nickname_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/guideline_1"
                app:layout_constraintEnd_toStartOf="@id/guideline_2"
                app:layout_constraintTop_toBottomOf="@id/login_input"
                app:layout_constraintBottom_toTopOf="@id/password_input">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nickname"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/guideline_1"
                app:layout_constraintEnd_toStartOf="@id/guideline_2"
                app:layout_constraintTop_toBottomOf="@id/nickname_input"
                app:layout_constraintBottom_toTopOf="@id/password_confirm_input"
                app:passwordToggleEnabled="true">


                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/password"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_confirm_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/guideline_1"
                app:layout_constraintEnd_toStartOf="@id/guideline_2"
                app:layout_constraintTop_toBottomOf="@id/password_input"
                app:layout_constraintBottom_toTopOf="@id/guideline_3"
                app:passwordToggleEnabled="true">


                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_confirm"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.47" />

            <TextView
                android:id="@+id/sex"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/sex"
                android:textStyle="bold"
                android:textSize="@dimen/medium_text"
                android:layout_marginTop="25dp"

                app:layout_constraintStart_toStartOf="@id/guideline_1"
                app:layout_constraintEnd_toStartOf="@id/guideline_2"
                app:layout_constraintTop_toBottomOf="@id/guideline_3"
                app:layout_constraintBottom_toTopOf="@id/sex_choose"/>

            <RadioGroup
                android:id="@+id/sex_choose"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="13dp"

                app:layout_constraintStart_toStartOf="@id/guideline_1"
                app:layout_constraintEnd_toStartOf="@id/guideline_2"
                app:layout_constraintTop_toBottomOf="@id/sex">

                <RadioButton
                    android:id="@+id/radio_male"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:paddingHorizontal="10dp"
                    android:text="@string/sex_man"
                    android:textSize="@dimen/small_text" />
                <RadioButton android:id="@+id/radio_female"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:paddingHorizontal="10dp"
                    android:text="@string/sex_female"
                    android:textSize="@dimen/small_text" />
                <RadioButton android:id="@+id/radio_other"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:paddingHorizontal="10dp"
                    android:text="@string/sex_other"
                    android:textSize="@dimen/small_text" />
            </RadioGroup>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/register_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"

                android:text="@string/register_button"
                android:textAlignment="center"
                android:textSize="@dimen/small_text"
                android:textStyle="bold"

                app:layout_constraintEnd_toStartOf="@id/guideline_2"
                app:layout_constraintStart_toStartOf="@id/guideline_1"
                app:layout_constraintTop_toBottomOf="@id/sex_choose"
                app:layout_constraintBottom_toTopOf="@id/policy" />

            <!-- android:text="@string/policy_agreement_full" сделано просто для виду -->
            <!-- В коде нужные части делаются кликабельными -->
            <TextView
                android:id="@+id/policy"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"

                android:text="@string/policy_agreement_full"
                android:textAlignment="center"
                android:textSize="@dimen/very_small_text"

                app:layout_constraintEnd_toStartOf="@id/guideline_2"
                app:layout_constraintStart_toStartOf="@id/guideline_1"
                app:layout_constraintTop_toBottomOf="@id/register_button" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</LinearLayout>