<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.new_activity.NewActivityProcessFragment"
    android:background="@color/transparent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".activity.new_activity.NewActivityFragment"
        android:background="@drawable/new_activity_layout_bg"
        android:paddingHorizontal="@dimen/start_end_padding_x1.5"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/activity_type_bicycle"
            android:textSize="@dimen/large_text"
            android:textStyle="bold"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/distance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/distance_example"
            android:textSize="@dimen/large_text"

            app:layout_constraintTop_toBottomOf="@id/name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/current_time"/>

        <TextView
            android:id="@+id/current_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/current_time_example"
            android:textSize="@dimen/large_text"
            android:textAlignment="textEnd"

            app:layout_constraintTop_toBottomOf="@id/name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/distance"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/finish_activity_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="32dp"

            android:contentDescription="@string/add_activity_fab_desc"
            android:src="@drawable/ic_racing_flag"
            app:backgroundTint="?attr/colorPrimary"

            app:layout_constraintTop_toBottomOf="@id/distance"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

