<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95"/>

    <ImageView
        android:id="@+id/bicycles_image"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/bicycles_image_desc"
        android:src="@drawable/ic_registration_bycycles"

        android:adjustViewBounds="true"
        android:layout_marginVertical="20dp"

        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintBottom_toTopOf="@id/welcome_message_1"
        app:layout_constraintEnd_toStartOf="@id/guideline_2"
        app:layout_constraintStart_toStartOf="@id/guideline_1"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcome_message_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"

        android:text="@string/welcome_message_1"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"

        app:layout_constraintBottom_toTopOf="@id/welcome_message_2"
        app:layout_constraintEnd_toStartOf="@id/guideline_2"
        app:layout_constraintStart_toStartOf="@id/guideline_1"
        app:layout_constraintTop_toBottomOf="@id/bicycles_image" />

    <TextView
        android:id="@+id/welcome_message_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"

        android:text="@string/welcome_message_2"
        android:textAlignment="center"
        android:textColor="@color/gray"
        android:textSize="16sp"

        app:layout_constraintBottom_toTopOf="@id/register_button"
        app:layout_constraintEnd_toStartOf="@id/guideline_2"
        app:layout_constraintStart_toStartOf="@id/guideline_1"
        app:layout_constraintTop_toBottomOf="@id/welcome_message_1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"

        android:text="@string/register_button"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"

        app:layout_constraintBottom_toTopOf="@id/have_account_button"
        app:layout_constraintEnd_toStartOf="@id/guideline_2"
        app:layout_constraintStart_toStartOf="@id/guideline_1"
        app:layout_constraintTop_toBottomOf="@id/welcome_message_2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/have_account_button"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/already_have_account"
        android:textAlignment="center"

        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline_2"
        app:layout_constraintStart_toStartOf="@id/guideline_1"
        app:layout_constraintTop_toBottomOf="@id/register_button" />

</androidx.constraintlayout.widget.ConstraintLayout>