<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="4dp"
    android:background="@drawable/item_activity_layout_bg"
    android:elevation="@dimen/rv_item_elevation">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95"/>

    <TextView
        android:id="@+id/distance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/distance_example"
        android:textSize="@dimen/large_text"
        android:textStyle="bold"
        android:layout_marginTop="15dp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline_1"
        app:layout_constraintEnd_toStartOf="@id/username"/>

    <TextView
        android:id="@+id/username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/username_example"
        android:textSize="@dimen/small_text"
        android:textColor="?attr/colorPrimary"
        android:textAlignment="textEnd"
        android:layout_marginTop="15dp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/distance"
        app:layout_constraintEnd_toEndOf="@id/guideline_2"/>

    <TextView
        android:id="@+id/time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/time_example"
        android:textSize="@dimen/small_text"
        android:layout_marginTop="5dp"

        app:layout_constraintTop_toBottomOf="@id/distance"
        app:layout_constraintStart_toStartOf="@id/guideline_1"
        app:layout_constraintEnd_toEndOf="@id/guideline_2"/>

    <TextView
        android:id="@+id/activity_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/activity_name_example"
        android:textSize="@dimen/small_text"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"

        app:layout_constraintTop_toBottomOf="@id/time"
        app:layout_constraintStart_toStartOf="@id/guideline_1"
        app:layout_constraintEnd_toStartOf="@id/activity_date"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/activity_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/activity_date_example"
        android:textSize="@dimen/small_text"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:textAlignment="textEnd"
        android:textColor="@color/gray"

        app:layout_constraintTop_toBottomOf="@id/time"
        app:layout_constraintStart_toEndOf="@id/activity_name"
        app:layout_constraintEnd_toEndOf="@id/guideline_2"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>